- https://github.com/eclipse-sirius/sirius-components/issues/1289[#1289] [core] Improve support for title expression from representation description.
- https://github.com/eclipse-sirius/sirius-components/issues/1341[#1341] [diagram] Expose source and target node variables during EdgeTool execution

=== New features

- https://github.com/eclipse-sirius/sirius-components/issues/1265[#1265] [form] Add support for flexbox containers on FormDescriptionEditors
- https://github.com/eclipse-sirius/sirius-components/issues/1272[#1272] [form] Add support for button widget on FormDescriptions
- https://github.com/eclipse-sirius/sirius-components/issues/1273[#1273] [form] Add support for button widget on FormDescriptionEditors
- https://github.com/eclipse-sirius/sirius-components/issues/1266[#1266] [form] Add styling support on bar-chart and pie-chart Widgets in View DSL
- https://github.com/eclipse-sirius/sirius-components/issues/1275[#1275] [form] Add support for Label widget in Form representation
- https://github.com/eclipse-sirius/sirius-components/issues/1281[#1281] [form] Add support for Link widget in Form representation
- https://github.com/eclipse-sirius/sirius-components/issues/1292[#1292] [form] Add support for List widget in Form representation

== v2022.7.0

=== Architectural decision records

- [ADR-60] Add support for d3 bars data-structure and bar-chart representation
- [ADR-61] Add support for flexbox containers on form description
- [ADR-62] Switch to a monorepo layout
- [ADR-63] Simplify the Sprotty integration
- [ADR-64] Add support for a ToggableAreaContainer in forms
- [ADR-65] Add support for a tree widget in forms
- [ADR-66] Add a new "Related Elements" view

=== Breaking changes

- https://github.com/eclipse-sirius/sirius-components/issues/1141[#1141] [frontend] The `PropertiesWebSocketContainer` which was hard-coded to display the `propertiesEvent` subscription has been made more generic and renamed `FormBasedView`.